--- a/index.html
+++ b/index.html
@@ -1,10 +1,50 @@
+<!DOCTYPE html>
 <html>
-<head>    
+<head>  
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">  
     <title>The superformula</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+
+    <div class="container" id="main">
     <div id="title">The superformula</div>
-    <h2>About</h2>
-    
+    <a href="">Github repository</a>
+    </div>
+
+
+    <div class="container">
+    <h2>Contents</h2><hr>
+    <h4 onclick="scroll('#about')">~What is the superformula?</h4><hr>
+    <h4 onclick="scroll('#about')">~Bunch of examples</h4><hr>
+    <h4 onclick="scroll('#about')">~References</h4>
+    </div>
+
+
+    <div class="container">
+    <h2>About the superformula</h2>
+    <p>The superformula was made/described by Johan Gielis in 2003, and it is a formula that can be used
+        to describe many lots of different shapes and curves, mainly the kind of shapes found in nature i.e. trees 
+        or bushes etc.
+    </p>
+
+    <p>The superformula is written in polar co-ordinates. Polar co-ordinates are different to the usual cartesian
+        co-ordinates which are (x,y), as polar co-ordinates have (r,ϴ), where r is the distance from the origin to the point,
+        and ϴ is the angle (in radians), from the x axis.</p>
+
+    <p>The complete superformula is:<br/>
+        <img class="img-responsive" src="http://paulbourke.net/geometry/supershape/supershape1.gif"><br/>
+        n1, n2, n3 and m can be any number, but a and b can be anything but 0 (since you can't divide by 0).</p>
+
+        <p>A bigger m = more rotational symmetry</p>
+        <p>When the n's are lower but the same the form will become pinched</p>
+        <p>Polygonal shapes can be made with high values of n1, and the high/equal values for n2 and n3</p>
+        <p>Starfish shapes can be made with smaller values of n1 than n2 and n3</p>
+        
+    </div>
+</body>
+
+
+</html>
